@@ -20,19 +20,11 @@
     <!-- Snowplow starts plowing -->
     <script type="text/javascript">
 
-        ;(function(p,l,o,w,i,n,g) {
-          p['GlobalSnowplowNamespace'] = p['GlobalSnowplowNamespace']||[];
-          p['GlobalSnowplowNamespace'].push(i);
-          p[i] = p[i] || function() {
-            (p[i].q = p[i].q||[]).push(arguments);
-          };
-          p[i].q = p[i].q || [];
-          n = l.createElement(o);
-          g = l.getElementsByTagName(o)[0];
-          n.async = 1;
-          n.src = w;
-          g.parentNode.insertBefore(n,g);
-        }(window, document, 'script', '../../dist/snowplow.js', 'new_name_here'));
+        // Load sp.js
+        ;(function(p,l,o,w,i,n,g){if(!p[i]){p.GlobalSnowplowNamespace=p.GlobalSnowplowNamespace||[];
+        p.GlobalSnowplowNamespace.push(i);p[i]=function(){(p[i].q=p[i].q||[]).push(arguments)
+        };n=l.createElement(o);g=l.getElementsByTagName(o)[0];
+        n.async=1;n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,"script","../../dist/snowplow.js","new_name_here"));
 
         window.new_name_here('newTracker', 'cf', 'd3rkrsqld9gmqf.cloudfront.net', {
           encodeBase64: false,
