@@ -26,6 +26,7 @@ Fixed link to code climate button in README.md (#149)
 Added examples of tracker namespacing (#159)
 Split async.html into async-small.html, async-medium.html (#160)
 Linked the Technical Docs and Setup Guide images to the appropriate pages (#164)
+Made JS invocation tag part of the build process (#158)
 
 Version 1.0.1 (2014-04-09)
 --------------------------
